--- a/Zadatak01 - Copy/AdminPage.Master
+++ b/Zadatak01 - Copy/AdminPage.Master
@@ -13,12 +13,27 @@
     </asp:ContentPlaceHolder>
 
     <!-- BOOTSTRAP -->
-    <link href="Content/bootstrap.min.css" rel="stylesheet"/>
+    <link href="Content/bootstrap.min.css" rel="stylesheet" />
 
     <!-- CUSTOM CSS -->
     <style>
-        fieldset { border: 1px solid #ced4da; padding: inherit; border-radius: 4px; } 
-        fieldset > legend { float: initial; width: auto; padding: revert; font-size: initial; margin: 0; }
+        fieldset {
+            border: 1px solid #ced4da;
+            padding: inherit;
+            border-radius: 4px;
+        }
+
+            fieldset > legend {
+                float: initial;
+                width: auto;
+                padding: revert;
+                font-size: initial;
+                margin: 0;
+            }
+
+        .table-hover tbody tr:hover td, .table-hover tbody tr:hover th {
+            background-color: rgb(253,253,253);
+        }
     </style>
 
     <link href="//cdn.datatables.net/1.12.1/css/jquery.dataTables.min.css" rel="stylesheet" />
@@ -28,38 +43,42 @@
     <form id="Web_app" runat="server">
         <nav class='navbar navbar-expand-lg navbar-light bg-light'>
             <div class='container-fluid'>
-                <a class='navbar-brand' href='/' style="padding-right:2rem">RWA Apartments Admin</a>
+                <a class='navbar-brand' href='/' style="padding-right: 2rem">RWA Apartments Admin</a>
                 <button class='navbar-toggler' type='button' data-bs-toggle='collapse' data-bs-target='#navbarSupportedContent' aria-controls='navbarSupportedContent' aria-expanded='false' aria-label='Toggle navigation'>
                     <span class='navbar-toggler-icon'></span>
                 </button>
                 <div class='collapse navbar-collapse' id='navbarSupportedContent'>
                     <ul class='navbar-nav me-auto mb-2 mb-lg-0'>
-		               <% if (Session["user"] == null) { %>
-		                     <li class='nav-item'>
-		                         <a class='nav-link' href='/' runat="server" meta:resourcekey="aLogin">Login</a>
-		                     </li>
-		                     <li class='nav-item'>
-		                         <a class='nav-link' href='/Registration' runat="server" meta:resourcekey="aRegistration">Registration</a>
-		                     </li>
-                        <% } else { %>
-                            <li class='nav-item'>
-                                <a class='nav-link' href="/Dashboard" runat="server" meta:resourcekey="aDashboard">Apartments</a>
-                           </li>
-                            <li class='nav-item'>
-                                <a class='nav-link' href='/Settings' runat="server" meta:resourcekey="aSettings">Tags</a>
-                           </li>
-                            <li class='nav-item'>
-                                <a class='nav-link' href='/Users' runat="server" meta:resourcekey="aUsers">Registered users</a>
-                            </li>
-	                    <% }  %>
+                        <% if (Session["user"] == null)
+                            { %>
+                        <li class='nav-item'>
+                            <a class='nav-link' href='/' runat="server" meta:resourcekey="aLogin">Login</a>
+                        </li>
+                        <li class='nav-item'>
+                            <a class='nav-link' href='/Registration' runat="server" meta:resourcekey="aRegistration">Registration</a>
+                        </li>
+                        <% }
+                        else
+                        { %>
+                        <li class='nav-item'>
+                            <a class='nav-link' href="/Dashboard" runat="server" meta:resourcekey="aDashboard">Apartments</a>
+                        </li>
+                        <li class='nav-item'>
+                            <a class='nav-link' href='/Settings' runat="server" meta:resourcekey="aSettings">Tags</a>
+                        </li>
+                        <li class='nav-item'>
+                            <a class='nav-link' href='/Users' runat="server" meta:resourcekey="aUsers">Registered users</a>
+                        </li>
+                        <% }  %>
                     </ul>
 
-                    <% if (Session["user"] != null) { %>
-                        <ul class='navbar-nav d-flex'>
-                            <li class='nav-item'>
-                                <asp:Button class='nav-link btn btn-danger text-white' OnClick="btnLogout_Click" ID="btnLogout" meta:resourcekey="btnLogout" runat="server" Text="Logout" />
-                            </li>
-                        </ul>
+                    <% if (Session["user"] != null)
+                        { %>
+                    <ul class='navbar-nav d-flex'>
+                        <li class='nav-item'>
+                            <asp:Button class='nav-link btn btn-danger text-white' OnClick="btnLogout_Click" ID="btnLogout" meta:resourcekey="btnLogout" runat="server" Text="Logout" />
+                        </li>
+                    </ul>
                     <% }  %>
                 </div>
             </div>
@@ -68,10 +87,13 @@
             <asp:ContentPlaceHolder ID="Content" runat="server">
             </asp:ContentPlaceHolder>
         </div>
-        <hr class='mt-4'><div class='text-center'><p>RWA- <%: DateTime.Now.Year %> &copy;</p></div>
+        <hr class='mt-4'>
+        <div class='text-center'>
+            <p>RWA- <%: DateTime.Now.Year %> &copy;</p>
+        </div>
     </form>
 
-     <!-- JQUERY -->
+    <!-- JQUERY -->
     <script src="Scripts/jquery-3.6.0.min.js"></script>
 
     <!-- BOOTSTRAP -->
