--- a/Zadatak01 - Copy/AdminPage.Master
+++ b/Zadatak01 - Copy/AdminPage.Master
@@ -23,14 +23,28 @@
 
         #popup {
             padding: 0;
-            border-radius: .7em;
+            border-radius: .6em;
             background-color: white;
             overflow: hidden;
-            width: 70vw;
+            width: 75vw;
             position: absolute;
             left: 15vw;
             right: 15vw;
-            top: 10em;
+            top: 5em;
+            z-index: 1000;
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        }
+
+        #popup_confirm{
+             padding: 0;
+            border-radius: .6em;
+            background-color: white;
+            overflow: hidden;
+            width: 40vw;
+            position: absolute;
+            left: 15vw;
+            right: 15vw;
+            top: 15em;
             z-index: 1000;
             box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
         }
