Started working on image upload to server

--- a/Zadatak01 - Copy/AdminPage.Master
+++ b/Zadatak01 - Copy/AdminPage.Master
@@ -66,6 +66,20 @@
             box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
         }
 
+        #popup_create_tag {
+            padding: 0;
+            border-radius: .6em;
+            background-color: white;
+            overflow: hidden;
+            width: 40vw;
+            position: absolute;
+            left: 15vw;
+            right: 15vw;
+            top: 15em;
+            z-index: 1000;
+            box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
+        }
+
         fieldset {
             border: 1px solid #ced4da;
             padding: inherit;
@@ -88,7 +102,7 @@
             text-align: center;
         }
 
-        #tagsContainer {
+        #tagsContainer, #imagesContainer{
             height: 27vh;
             overflow-y: scroll;
         }
