--- a/RwaApartments-Public/Views/Shared/_ApartmentInListView.cshtml
+++ b/RwaApartments-Public/Views/Shared/_ApartmentInListView.cshtml
@@ -1,6 +1,6 @@
 ﻿@model RwaApartmaniDataLayer.Models.Apartment
 
-<div class="container rounded-3" style="background-color:lightgray">
+<div class="container rounded-3 darkblue">
     <div class="row mb-3">
         <div class="col-4">
             <div class="container p-3">
@@ -8,11 +8,12 @@
             </div>
         </div>
         <div class="col-8">
-            <div class="row h-50">
-                <h2>@Model.NameEng</h2>
+            <div class="row h-50 clearfix">
+                <h2 class="pt-3 white_text">@Model.NameEng</h2>
+                <span class="text-white"><img src="~/Content/images/location.png" style="margin-right:.5em"/>@Model.CityName</span>
             </div>
             <div class="row h-50">
-                <h4>@Model.PriceString</h4>
+                @Html.Partial("_PriceView", model: Model.PriceString)
             </div>
         </div>
     </div>
