--- a/RwaApartments-Public/Content/custom-styling.css
+++ b/RwaApartments-Public/Content/custom-styling.css
@@ -1,9 +1,19 @@
 ﻿body {
 }
 
+a{
+    text-decoration: none;
+}
+
 .custom_image {
     width: 100%;
     height: 100%
+}
+
+.icon {
+    width: 1.3em;
+    height: 1.3em;
+    margin-right: .5em;
 }
 
 .darkblue {
@@ -39,4 +49,31 @@
     color: #000000;
     background-color: yellow;
     font-weight: bold;
+}
+
+.tag_container {
+    background-color: rgb(4, 41, 58);
+    color: rgb(236, 179, 101);
+}
+
+/* ===== Scrollbar CSS ===== */
+/* Firefox */
+/** {
+    scrollbar-width: auto;
+    scrollbar-color: #04293a #ffffff;
+}*/
+
+    /* Chrome, Edge, and Safari */
+    div.tags_list::-webkit-scrollbar {
+        width: 16px;
+    }
+
+div.tags_list::-webkit-scrollbar-track {
+    background-color: rgb(4, 28, 50);
+}
+
+div.tags_list::-webkit-scrollbar-thumb {
+    background-color: #04293a;
+    border-radius: 10px;
+    border: 3px solid rgb(4, 41, 58);
 }
