--- a/RwaApartments-Public/Views/Shared/_PriceView.cshtml
+++ b/RwaApartments-Public/Views/Shared/_PriceView.cshtml
@@ -1,7 +1,7 @@
 ﻿@model string
 
-<div class="container rounded-3 price_container" style="width:fit-content; height:fit-content; display:flex; align-items:center; justify-content:center">
-    <div class="p-1">
+<div class="rounded-3 price_container" style="width:fit-content; height:fit-content; display:flex; align-items:center; justify-content:center" >
+    <div class="p-2">
         <span style="font-weight:bold">@Model</span>
     </div>
 </div>
