--- a/RwaApartments-Public/Views/Shared/_Layout.cshtml
+++ b/RwaApartments-Public/Views/Shared/_Layout.cshtml
@@ -40,7 +40,7 @@
     </footer>
 
     @Scripts.Render("~/Scripts")
-    @RenderSection("scripts", required: false)
+    @RenderSection("Scripts", required: false)
 </body>
 </html>
 
