Listing all apartments with ajax

--- a/RwaApartments-Public/Views/Shared/_Layout.cshtml
+++ b/RwaApartments-Public/Views/Shared/_Layout.cshtml
@@ -28,7 +28,7 @@
         </div>
     </nav>
 
-    <div class="container py-3">
+    <div class="container py-3 custom_page">
         @RenderBody()
     </div>
 
