--- a/RwaApartments-Public/Views/Apartments/BrowseApartments.cshtml
+++ b/RwaApartments-Public/Views/Apartments/BrowseApartments.cshtml
@@ -30,8 +30,8 @@
 
 <div class="container">
     <div class="col-sm mb-4">
-        @using (Html.BeginForm(controllerName: "Apartments", actionName: "BrowseApartments", htmlAttributes: new { id = "formFilter" }, routeValues: null, method: FormMethod.Get))
-        {
+        @*@using (Html.BeginForm(controllerName: "Apartments", actionName: "BrowseApartments", htmlAttributes: new { id = "formFilter" }, routeValues: null, method: FormMethod.Get))
+        {*@
             <div class="row">
                 <div class="col-sm">
                     @*@Html.Label(expression: "Search", labelText: "Search", htmlAttributes: new { @class = "fw-bold" })*@
@@ -50,18 +50,19 @@
                     @Html.DropDownList(optionLabel: "--Any--", selectList: ddlFiltersSource, name: "FilterCode", htmlAttributes: new { @class = "form-control", id = "filterDropDownList" })
                 </div>
                 <div class="col-md-auto">
-                    <button type="submit" class="btn btn-warning">
+                    <button type="button" class="btn btn-warning" id="findButton">
                         <img src="~/Content/images/search.png" style="position: relative; top: -2px; left:3px" class="icon" />
                     </button>
                 </div>
             </div>
-        }
+        @*}*@
     </div>
-    <div class="col-sm">
-        @foreach (var apartment in Model.Apartments)
+    <div class="col-sm apartments_container">
+        @*@foreach (var apartment in Model.Apartments)
         {
             @Html.Partial("_ApartmentInListView", model: apartment)
-        }
+        }*@
+        @*<partial name="_ApartmentInListView"></partial>*@
     </div>
 </div>
 
@@ -69,6 +70,27 @@
     @Scripts.Render("~/Scripts/jquery-3.6.0.min.js")
     @Scripts.Render("~/Scripts/jquery-ui.js")
     <script>
+        //http://localhost:50668/?Search=&CityId=&StatusId=&FilterCode=PLH
+        $(document).ready(function (e) {
+            $.ajax({
+                url: `/Apartments/LoadApartmentListPartialView/?Search=${$("#Search").val()}&CityId=${$("#cityDropDownList").val()}&StatusId=${$("#statusDropDownList").val()}&FilterCode=${$("#filterDropDownList").val()}`,
+                success: function (partialView) {
+                    $(".apartments_container").html("")
+                    $(".apartments_container").append(partialView);
+                }
+            });  
+        });
+
+        $("#findButton").click(function () {
+            $.ajax({
+                url: `/Apartments/LoadApartmentListPartialView/?Search=${$("#Search").val()}&CityId=${$("#cityDropDownList").val()}&StatusId=${$("#statusDropDownList").val()}&FilterCode=${$("#filterDropDownList").val()}`,
+                success: function (partialView) {
+                    $(".apartments_container").html("")
+                    $(".apartments_container").append(partialView);
+                }
+            });  
+        });
+
         $("#filterDropDownList").val("PLH");
         $("#Search").autocomplete({
             source: '@Url.Action(actionName: "GetApartmentNames", controllerName: "Ajax")',
