--- a/RwaApartments-Public/Content/custom-styling.css
+++ b/RwaApartments-Public/Content/custom-styling.css
@@ -69,21 +69,22 @@ a{
 }
 /* ===== Scrollbar CSS ===== */
 /* Firefox */
-/** {
+* {
     scrollbar-width: auto;
-    scrollbar-color: #04293a #ffffff;
-}*/
-/* Chrome, Edge, and Safari */
-div.tags_list::-webkit-scrollbar {
-    width: 16px;
+    scrollbar-color: #060956 #ffffff;
 }
 
-div.tags_list::-webkit-scrollbar-track {
-    background-color: rgb(4, 28, 50);
-}
+    /* Chrome, Edge, and Safari */
+    *::-webkit-scrollbar {
+        width: 16px;
+    }
 
-div.tags_list::-webkit-scrollbar-thumb {
-    background-color: #04293a;
-    border-radius: 10px;
-    border: 3px solid rgb(4, 41, 58);
-}
+    *::-webkit-scrollbar-track {
+        background-color: rgb(4, 28, 50);
+    }
+
+    *::-webkit-scrollbar-thumb {
+        background-color: rgb(6, 70, 99);
+        border-radius: 10px;
+        border: 3px solid rgb(6, 70, 99);
+    }
