minor jquery changes

--- a/RwaApartments-Public/Views/Apartments/BrowseApartments.cshtml
+++ b/RwaApartments-Public/Views/Apartments/BrowseApartments.cshtml
@@ -30,23 +30,17 @@
 
 <div class="container">
     <div class="col-sm mb-4">
-        @*@using (Html.BeginForm(controllerName: "Apartments", actionName: "BrowseApartments", htmlAttributes: new { id = "formFilter" }, routeValues: null, method: FormMethod.Get))
-            {*@
         <div class="row">
             <div class="col-sm">
-                @*@Html.Label(expression: "Search", labelText: "Search", htmlAttributes: new { @class = "fw-bold" })*@
                 @Html.TextBox(name: "Search", value: "", htmlAttributes: new { @class = "form-control", placeholder = "Search apartment..." })
             </div>
             <div class="col-sm">
-                @*@Html.Label(expression: "CityId", labelText: "City:", htmlAttributes: new { @class = "fw-bold" })*@
                 @Html.DropDownList(optionLabel: "-Any city-", selectList: ddlCitySource, name: "CityId", htmlAttributes: new { @class = "form-control", id = "cityDropDownList" })
             </div>
             <div class="col-sm">
-                @*@Html.Label(expression: "StatusId", labelText: "Current status:", htmlAttributes: new { @class = "fw-bold" })*@
                 @Html.DropDownList(optionLabel: "-Any status-", selectList: ddlStatusSource, name: "StatusId", htmlAttributes: new { @class = "form-control", id = "statusDropDownList" })
             </div>
             <div class="col-sm">
-                @*@Html.Label(expression: "FilterCode", labelText: "Filter by:", htmlAttributes: new { @class = "fw-bold" })*@
                 @Html.DropDownList(optionLabel: "--Any--", selectList: ddlFiltersSource, name: "FilterCode", htmlAttributes: new { @class = "form-control", id = "filterDropDownList" })
             </div>
             <div class="col-md-auto">
@@ -58,11 +52,6 @@
         @*}*@
     </div>
     <div class="col-sm apartments_container">
-        @*@foreach (var apartment in Model.Apartments)
-            {
-                @Html.Partial("_ApartmentInListView", model: apartment)
-            }*@
-        @*<partial name="_ApartmentInListView"></partial>*@
     </div>
 </div>
 
@@ -70,8 +59,6 @@
     @Scripts.Render("~/Scripts/jquery-3.6.0.min.js")
     @Scripts.Render("~/Scripts/jquery-ui.js")
     <script>
-        //http://localhost:50668/?Search=&CityId=&StatusId=&FilterCode=PLH
-
         $("#filterDropDownList").val("PLH");
         $("#Search").autocomplete({
             source: '@Url.Action(actionName: "GetApartmentNames", controllerName: "Ajax")',
@@ -85,8 +72,12 @@
             }
         });
 
-        $(document).ready(loadApartmentListPartialViewAjax());
-        $("#findButton").click(loadApartmentListPartialViewAjax());
+        $(document).ready(function () {
+            loadApartmentListPartialViewAjax();
+        });
+        $("#findButton").click(function () {
+            loadApartmentListPartialViewAjax();
+        });
         $('body').keypress(function (event) {
             var keycode = (event.keyCode ? event.keyCode : event.which);
             if (keycode == '13') {
@@ -94,6 +85,7 @@
             }
         });
 
+        //example url: http://localhost:50668/?Search=&CityId=&StatusId=&FilterCode=PLH
         function loadApartmentListPartialViewAjax() {
             $.ajax({
                 url: `/Apartments/LoadApartmentListPartialView/?Search=${$("#Search").val()}&CityId=${$("#cityDropDownList").val()}&StatusId=${$("#statusDropDownList").val()}&FilterCode=${$("#filterDropDownList").val()}`,
