--- a/RwaApartments-Public/Views/Apartments/BrowseApartments.cshtml
+++ b/RwaApartments-Public/Views/Apartments/BrowseApartments.cshtml
@@ -1,4 +1,4 @@
-﻿@model RwaApartments_Public.Models.ViewModels.ApartmentsBrowserViewModel
+﻿@*@model RwaApartments_Public.Models.ViewModels.ApartmentsBrowserViewModel*@
 @using RwaApartmaniDataLayer.Repositories.Factories
 @using RwaApartmaniDataLayer.Models
 @{
@@ -11,12 +11,11 @@
         dataValueField: "Id"
         );
 
-    SelectList ddlStatusSource = new SelectList
-        (
-        items: (RepoFactory.GetRepoInstance()).LoadApartmentStatus(),
-        dataTextField: "NameEng",
-        dataValueField: "Id"
-        );
+    IList<SelectListItem> ddlStatusItems = new List<SelectListItem>();
+    ddlStatusItems.Add(new SelectListItem { Text = "Avaliable apartments", Value = "avaliable", Selected = true});
+    ddlStatusItems.Add(new SelectListItem { Text = "All apartments", Value = "all" });
+    ddlStatusItems.Add(new SelectListItem { Text = "Unavaliable apartments", Value = "unavaliable" });
+    SelectList ddlStatusSource = new SelectList(ddlStatusItems, "Value", "Text");
 
     IList<SelectListItem> ddlFilterItems = new List<SelectListItem>();
     ddlFilterItems.Add(new SelectListItem { Text = "Price: Lowest to highest", Value = "PLH", Selected = true });
@@ -35,13 +34,13 @@
                 @Html.TextBox(name: "Search", value: "", htmlAttributes: new { @class = "form-control", placeholder = "Search apartment..." })
             </div>
             <div class="col-sm">
-                @Html.DropDownList(optionLabel: "-Any city-", selectList: ddlCitySource, name: "CityId", htmlAttributes: new { @class = "form-control", id = "cityDropDownList" })
+                @Html.DropDownList(optionLabel: "Any city", selectList: ddlCitySource, name: "CityId", htmlAttributes: new { @class = "form-control", id = "cityDropDownList" })
             </div>
             <div class="col-sm">
-                @Html.DropDownList(optionLabel: "-Any status-", selectList: ddlStatusSource, name: "StatusId", htmlAttributes: new { @class = "form-control", id = "statusDropDownList" })
+                @Html.DropDownList(optionLabel: null, selectList: ddlStatusSource, name: "StatusId", htmlAttributes: new { @class = "form-control", id = "statusDropDownList" })
             </div>
             <div class="col-sm">
-                @Html.DropDownList(optionLabel: "--Any--", selectList: ddlFiltersSource, name: "FilterCode", htmlAttributes: new { @class = "form-control", id = "filterDropDownList" })
+                @Html.DropDownList(optionLabel: "-No filter-", selectList: ddlFiltersSource, name: "FilterCode", htmlAttributes: new { @class = "form-control", id = "filterDropDownList" })
             </div>
             <div class="col-md-auto">
                 <button type="button" class="btn btn-warning" id="findButton">
@@ -59,7 +58,14 @@
     @Scripts.Render("~/Scripts/jquery-3.6.0.min.js")
     @Scripts.Render("~/Scripts/jquery-ui.js")
     <script>
+
+        $("#cityDropDownList, #statusDropDownList, #filterDropDownList").each(function () {
+            $(this).change(function () {
+                loadApartmentListPartialViewAjax();
+            });
+        });
         $("#filterDropDownList").val("PLH");
+        $("#statusDropDownList").val("avaliable");
         $("#Search").autocomplete({
             source: '@Url.Action(actionName: "GetApartmentNames", controllerName: "Ajax")',
             minLength: 2,
@@ -71,7 +77,6 @@
                 return false;
             }
         });
-
         $(document).ready(function () {
             loadApartmentListPartialViewAjax();
         });
@@ -84,7 +89,6 @@
                 loadApartmentListPartialViewAjax();
             }
         });
-
         //example url: http://localhost:50668/?Search=&CityId=&StatusId=&FilterCode=PLH
         function loadApartmentListPartialViewAjax() {
             $.ajax({
